# myos.frameworks

./: .gitignore  README.md  build.sh  clean.sh
CFNetwork/: CFNetwork-private.h  CFNetwork.h  Makefile  WebServer.m
CoreAnimation/: CAAction.h  CAAnimation-private.h  CAAnimation.h  CAAnimation.m  CAAnimator.h  CAAnimator.m  CABackingStore.h  CABackingStore.m  CACompositor.h  CACompositor.m  CADisplayLink.h  CADisplayLink.m  CAGeometry.h  CAGeometry.m  CAGradientLayer-private.h  CAGradientLayer.m  CALayer+PresentationLayer.h  CALayer+PresentationLayer.m  CALayer-CFunctions.h  CALayer-CFunctions.m  CALayer-private.h  CALayer.h  CALayer.m  CALayerObserver.h  CALayerObserver.m  CAMediaTiming.h  CAMediaTiming.m  CAMediaTimingFunction-private.h  CAMediaTimingFunction.m  CARenderLayer.h  CARenderLayer.m  CARenderer-private.h  CARenderer.h  CARenderer.m  CAScrollLayer.h  CAScrollLayer.m  CATextLayer.h  CATextLayer.m  CATransaction-private.h  CATransaction.h  (+9 more)
CoreFoundation/: Android.mk  CFArray-private.c  CFArray-private.h  CFArray.c  CFAttributedString-myos.c  CFAttributedString-private.h  CFAttributedString.c  CFAttributedString.h  CFBag.c  CFBase-private.c  CFBase-private.h  CFBase.c  CFBase.h  CFDateFormatter.c  CFDictionary.c  CFNumber.c  CFRunLoop.c  CFRuntime.c  CFRuntime.h  (+27 more)
WebServices/: .gitignore  ChangeLog  GWSBinding.h  GWSBinding.m  GWSCoder.h  GWSCoder.m  GWSConstants.h  GWSDocument.h  GWSDocument.m  GWSElement.h  GWSElement.m  GWSExtensibility.h  GWSExtensibility.m  GWSHash.h.in  GWSHash.m  GWSJSONCoder.m  GWSMessage.h  GWSMessage.m  GWSPort.h  GWSPort.m  GWSPortType.h  GWSPortType.m  GWSPrivate.h  GWSSOAPCoder.m  GWSService.h  GWSService.m  GWSType.h  GWSXMLRPCCoder.m  Makefile  SMS.wsdl  WSSUsernameToken.h  WSSUsernameToken.m  WebServices-private.h  WebServices.gsdoc  WebServices.h  WebServices.m  config.h.in  config.make.in  configure  configure.ac  (+1 more)
WebServices/targets/WebServices/: Info.plist
(+710 files in other folders)
